src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__sized_varargs_require_type.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: "&diagnostics"
---
error[E038]: Missing datatype: Sized Variadics require a known datatype.
  ┌─ <internal>:5:27
  │
5 │             args : {sized}...;
  │                           ^^^ Missing datatype: Sized Variadics require a known datatype.
